============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.6.3 - not yet released

Version 6.6.2 - 2013/06/12
* map
  - fix misplaced topography labels (#2564)
  - fix keyboard panning with track up (#2908)
* infoboxes
  - ensure that the unit symbol is visible
  - fix ballast display in vario gauge (#2911)
* tasks
  - update all settings after task type change
* devices
  - Volkslogger: fix IGC file download on Windows CE
  - EWmicroRecorder: fix corrupt task declaration (#2921)
  - fix potential crash when garbage is received from device
  - fix IOIO reconnect
  - generate G record even when first device has no GPS (#2849)
* cross section
  - also display unknown airspace types (#2884)
* Raspberry Pi
  - fix instant crash (#2922)
* Altair
  - never override data path (#2509)
* Android
  - faster startup

Version 6.6.1 - 2013/05/08
* cross section
  - fix airspace display after display rotation (#2825)
* user interface
  - fix malformed name in airspace warning dialog (#2813)
  - don't lost focus to waypoint list on Altair (#2835)
  - don't forget map zoom when returning to map (#2805)
* devices
  - indicate duplicate devices in list
  - allow using more than one TCP/UDP device
  - fix spurious errors after IOIO baud rate change (#2733, #2754)
  - K6Bt: fix configured baud rate setup on Android (#2836)
  - work around Android 2.3 Bluetooth crash bug
* tasks
  - prevent moving target out of the cylinder (#2794)
* configuration
  - fix regression with polar configuration (#2803)
* support gcc 4.8

Version 6.6 - 2013/04/23
* map
  - optional distinct map zoom on each page (#1603)
  - add label selection "Task waypoints & airfields"
  - allow configuration of "Final glide bar" display (#2554)
  - new snail trail option "Vario-scaled dots and lines"
  - topography icons