@@ -32,6 +32,10 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 
+#ifdef ANDROID
+#include <sys/syscall.h>
+#endif
+
 #ifdef HAVE_POSIX
 #include <poll.h>
 #endif
@@ -70,7 +74,13 @@ FileDescriptor::CreatePipe(FileDescriptor &r, FileDescriptor &w)
 
 #ifdef __linux__
   const int flags = O_CLOEXEC;
+#ifdef ANDROID
+  /* Bionic provides the pipe2() function only since Android 2.3,
+     therefore we must roll our own system call here */
+  const int result = syscall(__NR_pipe2, fds, flags);
+#else
   const int result = pipe2(fds, flags);
+#endif
 #else
   const int result = pipe(fds);
 #endif
